--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,12 @@ packages = [{include = "src"}]
 python = "^3.9"
 rouge = "^1.0.1"
 numpy = "^1.26.4"
+scikit-learn = "^1.4.1.post1"
+pymorphy2 = "^0.9.1"
+nltk = "^3.8.1"
+rake-nltk = "^1.0.6"
+coloredlogs = "^15.0.1"
+fasttext = {git = "https://github.com/facebookresearch/fastText"}
 
 
 [tool.poetry.group.dev.dependencies]
