added docstring and fix codestyle and bug with imports. added pytests for main class

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,7 +31,7 @@ repos:
     rev: v1.2.0
     hooks:
     - id: mypy
-      args: [--strict, --ignore-missing-imports]
+      files: ^src/
 
   - repo: local
     hooks:
