--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,8 @@ coverage = "^7.4.4"
 pythonpath = [
   ".", "src",
 ]
-
+testpaths = ["./tests/"]
+filterwarnings = ["ignore::DeprecationWarning"]
 
 [tool.black]
 line-length = 100
@@ -51,7 +52,6 @@ multi_line_output = 3
 include_trailing_comma = true
 use_parentheses = true
 ensure_newline_before_comments = true
-
 
 [tool.coverage.run]
 branch = true
