--- a/setup.cfg
+++ b/setup.cfg
@@ -6,12 +6,14 @@ exclude =
     .pytest_cache,
     .vscode,
     __init__.py,
+    tests,
 files = src
 ignore_missing_imports = True
 warn_redundant_casts = True
 warn_return_any = True
 warn_unreachable = True
 warn_unused_configs = True
+disallow_any_decorated = True
 
 [flake8]
 ignore = D203, E203
