--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ nltk = "^3.8.1"
 rake-nltk = "^1.0.6"
 coloredlogs = "^15.0.1"
 fasttext = {git = "https://github.com/facebookresearch/fastText"}
+pandas = "^2.2.1"
+tqdm = "^4.66.2"
 
 
 [tool.poetry.group.dev.dependencies]
