--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,9 @@ pymorphy2 = "^0.9.1"
 nltk = "^3.8.1"
 rake-nltk = "^1.0.6"
 coloredlogs = "^15.0.1"
-fasttext = {git = "https://github.com/facebookresearch/fastText"}
 pandas = "^2.2.1"
 tqdm = "^4.66.2"
+fasttext-wheel = "^0.9.2"
 
 
 [tool.poetry.group.dev.dependencies]
