--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ exclude =
     .vscode,
     __init__.py,
     tests,
-files = src
+files = text_tagging_model
 ignore_missing_imports = True
 warn_redundant_casts = True
 warn_return_any = True
