--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,7 +31,7 @@ repos:
     rev: v1.2.0
     hooks:
     - id: mypy
-      files: ^src/
+      files: ^text_tagging_model/
 
   - repo: local
     hooks:
