--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ coloredlogs = "^15.0.1"
 pandas = "^2.0.3"
 tqdm = "^4.66.2"
 fasttext-wheel = "^0.9.2"
+transformers = "^4.39.3"
+sentencepiece = "^0.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -35,6 +37,7 @@ isort = "^5.13.2"
 pre-commit = "^3.7.0"
 black = "^24.3.0"
 coverage = "^7.4.4"
+torch = "^2.2.2"
 
 
 [tool.pytest.ini_options]
