--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "text-tagging-model"
-version = "0.1.2a2"
+version = "0.1.2a27"
 description = "Here we collected some online and offline models for text tagging."
 authors = [
     "Pavel Kochkin <kochkin27@gmail.com>",
@@ -20,14 +20,15 @@ pymorphy2 = "^0.9.1"
 nltk = "^3.8.1"
 rake-nltk = "^1.0.6"
 coloredlogs = "^15.0.1"
-pandas = "^2.0.3"
 tqdm = "^4.66.2"
 fasttext-wheel = "^0.9.2"
 transformers = "^4.39.3"
 sentencepiece = "^0.2.0"
+sentence-transformers = "^2.6.1"
 
 
 [tool.poetry.group.dev.dependencies]
+pandas = "~2.0.3"
 pylint = "^2.17.4"
 flake8 = "^6.0.0"
 mypy = "^1.2.0"
