--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "text-tagging-model"
-version = "0.1.2a27"
+version = "0.1.3"
 description = "Here we collected some online and offline models for text tagging."
 authors = [
     "Pavel Kochkin <kochkin27@gmail.com>",
@@ -14,7 +14,6 @@ packages = [{include = "text_tagging_model"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 rouge = "^1.0.1"
-numpy = "~1.25.2"
 scikit-learn = "^1.4.1.post1"
 pymorphy2 = "^0.9.1"
 nltk = "^3.8.1"
@@ -25,6 +24,7 @@ fasttext-wheel = "^0.9.2"
 transformers = "^4.39.3"
 sentencepiece = "^0.2.0"
 sentence-transformers = "^2.6.1"
+numpy = "^1.24.4"
 
 
 [tool.poetry.group.dev.dependencies]
